[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lever"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dynamic = ["dependencies"]

[tool.setuptools]
py-modules = ["config"]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "policy_reusability*",
    "pi2vec*",
    "faiss_utils*",
    "plots*",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
